--- a/ECO/ECO.vcxproj
+++ b/ECO/ECO.vcxproj
@@ -114,8 +114,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>F:\caffe-windows\build\include;F:\caffe-windows\include;C:\Users\ws_zz\.caffe\dependencies\libraries_v140_x64_py27_1.1.0\libraries\include;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v8.0\include;F:\opencv\build\include;$(IncludePath)</IncludePath>
-    <LibraryPath>F:\caffe-windows\build\lib\Release;C:\Users\ws_zz\.caffe\dependencies\libraries_v140_x64_py27_1.1.0\libraries\lib;C:\Users\ws_zz\.caffe\dependencies\libraries_v140_x64_py27_1.1.0\libraries\x64\vc14\lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v8.0\lib\x64;F:\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>E:\WorkSpace\Projects\caffe\include;E:\WorkSpace\Projects\caffe\scripts\build\include;C:\Users\cuiyongming\.caffe\dependencies\libraries_v140_x64_py35_1.1.0\libraries\include;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v8.0\include;E:\software\opencv\opencv-3.1.0\opencv\build\include;C:\Users\cuiyongming\.caffe\dependencies\libraries_v140_x64_py35_1.1.0\libraries\include\boost-1_61;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\WorkSpace\Projects\caffe\scripts\build\lib\Release;C:\Users\cuiyongming\.caffe\dependencies\libraries_v140_x64_py35_1.1.0\libraries\lib;C:\Users\cuiyongming\.caffe\dependencies\libraries_v140_x64_py35_1.1.0\libraries\x64\vc14\lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v8.0\lib\x64;E:\software\opencv\opencv-3.1.0\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -169,7 +169,7 @@
       <WarningLevel>Level3</WarningLevel>
       <PrecompiledHeader>
       </PrecompiledHeader>
-      <Optimization>Disabled</Optimization>
+      <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -182,7 +182,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opencv_world330.lib;caffe.lib;caffe.bin.lib;caffeproto.lib;caffehdf5.lib;caffehdf5_hl.lib;gflags.lib;glog.lib;leveldb.lib;libprotobuf.lib;libopenblas.dll.a;lmdb.lib;boost_python-vc140-mt-1_61.lib;boost_thread-vc140-mt-1_61.lib;cublas.lib;cuda.lib;cudart.lib;curand.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opencv_world310.lib;caffe.lib;caffe.bin.lib;caffeproto.lib;caffehdf5.lib;caffehdf5_hl.lib;gflags.lib;glog.lib;leveldb.lib;libprotobuf.lib;libopenblas.dll.a;lmdb.lib;boost_python-vc140-mt-1_61.lib;boost_thread-vc140-mt-1_61.lib;cublas.lib;cuda.lib;cudart.lib;curand.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <Profile>true</Profile>
     </Link>
   </ItemDefinitionGroup>
